src/test/ui/const-generics/issues/issue-62456.full.stderr
error: constant expression depends on a generic parameter
  --> $DIR/issue-62456.rs:6:20
   |
LL |     let _ = [0u64; N + 1];
   |                    ^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to previous error

